# filesystem

./: .gitignore  CMakeLists.txt  main.cpp
include/: Bitmap.hpp  Controller.hpp  Descriptors.hpp  Directories.hpp  Disk.hpp  Entities.hpp  EnumMacros.hpp  FileSystem.hpp  IOSystem.hpp  OFT.hpp  OFTEntry.hpp
src/: Bitmap.cpp  Controller.cpp  Descriptors.cpp  Directories.cpp  Disk.cpp  FileSystem.cpp  IOSystem.cpp  OFT.cpp  OFTEntry.cpp  Utils.hpp
test/: output-close.txt  output-sample.txt  output-test-buffer-block-changing.txt  test-buffer-block-changing.txt  test-buffer-load.txt  test-close.txt  test-destroy.txt  test-end-of-file.txt  test-fs-overflow.txt  test-rewrite.txt  test-sample-after-restore.txt  test-sample-before-restore.txt  test-sample.txt  test_end_of_file.txt  test_end_of_file_output.txt  test_fs_overflow.txt  test_fs_overflow_output.txt
test/output/: output-buffer-load.txt  output-destroy.txt  output-rewrite.txt  output-sample-after.txt  output-sample-before.txt  output-sample.txt  output-test-buffer-block-changing.txt  output-test-end-of-file.txt  output-test-fs-overflow.txt  test_end_of_file_output.txt
